Asynchronous tasks are now performed recursively